--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "^4.2.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
+    "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "prettier-eslint-cli": "^5.0.0",
     "prettier-plugin-svelte": "^0.7.0",
@@ -43,9 +44,9 @@
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
+    "svelte-preprocess": "^3.5.0",
     "tailwindcss": "^1.2.0"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "npm run format"
