feat: begin a minimal home page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
             "files": ["**/*.svelte"],
             "processor": "svelte3/svelte3"
         }
-    ]
+    ],
+    "rules": {
+        "semi": ["error", "always"]
+    }
 }
