--- a/package.json
+++ b/package.json
@@ -1,55 +1,59 @@
 {
-  "name": "portfolio",
-  "description": "My portfolio built using Sapper, Svelte & TailwindCSS",
-  "version": "0.0.1",
-  "scripts": {
-    "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
-    "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
-    "dev": "sapper dev",
-    "build": "npm run build:tailwind && sapper build --legacy",
-    "export": "npm run build:tailwind && sapper export --legacy",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run",
-    "format": "prettier-eslint --write \"$PWD/src/**/*.{js,svelte,json,html}\""
-  },
-  "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.0",
-    "compression": "^1.7.4",
-    "polka": "next",
-    "sirv": "^0.4.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/runtime": "^7.8.7",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-replace": "^2.3.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "husky": "^4.2.3",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.0",
-    "postcss-nested": "^4.2.1",
-    "prettier": "^1.19.1",
-    "prettier-eslint-cli": "^5.0.0",
-    "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^2.1.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.10",
-    "svelte": "^3.20.1",
-    "svelte-preprocess": "^3.5.0",
-    "tailwindcss": "^1.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format"
+    "name": "portfolio",
+    "description": "My portfolio built using Sapper, Svelte & TailwindCSS",
+    "version": "0.0.1",
+    "scripts": {
+        "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
+        "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
+        "dev": "sapper dev",
+        "build": "npm run build:tailwind && sapper build --legacy",
+        "export": "npm run build:tailwind && sapper export --legacy",
+        "start": "node __sapper__/build",
+        "cy:run": "cypress run",
+        "cy:open": "cypress open",
+        "test": "run-p --race dev cy:run"
+    },
+    "dependencies": {
+        "@fullhuman/postcss-purgecss": "^2.1.0",
+        "compression": "^1.7.4",
+        "polka": "next",
+        "sirv": "^0.4.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.8.7",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.8.3",
+        "@babel/preset-env": "^7.8.7",
+        "@babel/runtime": "^7.8.7",
+        "@rollup/plugin-commonjs": "^11.0.2",
+        "@rollup/plugin-node-resolve": "^7.1.1",
+        "@rollup/plugin-replace": "^2.3.1",
+        "eslint": "^6.8.0",
+        "eslint-plugin-svelte3": "^2.7.3",
+        "husky": "^4.2.3",
+        "lint-staged": "^10.0.8",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^7.1.0",
+        "postcss-nested": "^4.2.1",
+        "prettier": "^1.19.1",
+        "prettier-eslint-cli": "^5.0.0",
+        "prettier-plugin-svelte": "^0.7.0",
+        "rollup": "^2.1.0",
+        "rollup-plugin-babel": "^4.4.0",
+        "rollup-plugin-svelte": "^5.1.1",
+        "rollup-plugin-terser": "^5.3.0",
+        "sapper": "^0.27.10",
+        "svelte": "^3.20.1",
+        "svelte-preprocess": "^3.5.0",
+        "tailwindcss": "^1.2.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,svelte}": "eslint --fix",
+        "*.{js,svelte,json,html}": "prettier --write"
     }
-  }
 }
