--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
     "trailingComma": "es5",
     "tabWidth": 4,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "plugins": ["prettier-plugin-svelte"]
 }
