fix(modal): fix component never unmounting issue
The `Projects` page was never unmounted by Svelte because
Carousel component was keeping a reference to a component used
inside Modal component, preventing it to unmount, and then
preventing all its ancestors to unmount.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,svelte}": "eslint --fix",
+        "*.{js}": "eslint --fix",
         "*.{js,svelte,json,html}": "prettier --write"
     }
 }
