improvement: use my new logo

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,12 +7,12 @@
     "start_url": "/",
     "icons": [
         {
-            "src": "logo-192.png",
+            "src": "/img/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "logo-512.png",
+            "src": "/img/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
