--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "sirv": "^0.4.2",
         "svelte-waypoint": "^0.1.4",
         "workbox-cacheable-response": "^5.1.2",
+        "workbox-core": "^5.1.2",
         "workbox-expiration": "^5.1.2",
         "workbox-precaching": "^5.1.2",
         "workbox-routing": "^5.1.2",
-        "workbox-strategies": "^5.1.2"
+        "workbox-strategies": "^5.1.2",
+        "workbox-window": "^5.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
