--- a/package.json
+++ b/package.json
@@ -14,48 +14,49 @@
         "test": "run-p --race dev cy:run"
     },
     "dependencies": {
-        "@fullhuman/postcss-purgecss": "^2.1.0",
+        "@fullhuman/postcss-purgecss": "^2.2.0",
         "compression": "^1.7.4",
         "polka": "next",
-        "sirv": "^0.4.2",
+        "sirv": "^0.4.6",
         "svelte-waypoint": "^0.1.4",
-        "workbox-cacheable-response": "^5.1.2",
-        "workbox-core": "^5.1.2",
-        "workbox-expiration": "^5.1.2",
-        "workbox-precaching": "^5.1.2",
-        "workbox-routing": "^5.1.2",
-        "workbox-strategies": "^5.1.2",
-        "workbox-window": "^5.1.2"
+        "workbox-cacheable-response": "^5.1.3",
+        "workbox-core": "^5.1.3",
+        "workbox-expiration": "^5.1.3",
+        "workbox-precaching": "^5.1.3",
+        "workbox-routing": "^5.1.3",
+        "workbox-strategies": "^5.1.3",
+        "workbox-window": "^5.1.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.0",
+        "@babel/core": "^7.10.1",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-runtime": "^7.9.0",
-        "@babel/preset-env": "^7.9.0",
-        "@babel/runtime": "^7.9.2",
-        "@rollup/plugin-commonjs": "^11.0.2",
-        "@rollup/plugin-node-resolve": "^7.1.1",
-        "@rollup/plugin-replace": "^2.3.1",
-        "eslint": "^6.8.0",
+        "@babel/plugin-transform-runtime": "^7.10.1",
+        "@babel/preset-env": "^7.10.1",
+        "@babel/runtime": "^7.10.1",
+        "@rollup/plugin-commonjs": "^12.0.0",
+        "@rollup/plugin-node-resolve": "^8.0.0",
+        "@rollup/plugin-replace": "^2.3.2",
+        "autoprefixer": "^9.8.0",
+        "eslint": "^7.1.0",
         "eslint-plugin-svelte3": "^2.7.3",
-        "husky": "^4.2.3",
-        "lint-staged": "^10.0.9",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.2.7",
         "npm-run-all": "^4.1.5",
-        "postcss-cli": "^7.1.0",
+        "postcss-cli": "^7.1.1",
         "postcss-nested": "^4.2.1",
-        "prettier": "^2.0.2",
+        "prettier": "^2.0.5",
         "prettier-eslint-cli": "^5.0.0",
-        "prettier-plugin-svelte": "^0.7.0",
+        "prettier-plugin-svelte": "^1.1.0",
         "rimraf": "^3.0.2",
-        "rollup": "^2.1.0",
+        "rollup": "^2.11.2",
         "rollup-plugin-babel": "^4.4.0",
-        "rollup-plugin-svelte": "^5.1.1",
-        "rollup-plugin-terser": "^5.3.0",
-        "sapper": "^0.27.11",
-        "sharp": "^0.25.2",
-        "svelte": "^3.20.1",
-        "svelte-preprocess": "^3.5.0",
-        "tailwindcss": "^1.2.0"
+        "rollup-plugin-svelte": "^5.2.2",
+        "rollup-plugin-terser": "^6.1.0",
+        "sapper": "^0.27.13",
+        "sharp": "^0.25.3",
+        "svelte": "^3.23.0",
+        "svelte-preprocess": "^3.7.4",
+        "tailwindcss": "^1.4.6"
     },
     "husky": {
         "hooks": {
