--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
 		"svelte-preprocess": "^4.7.1",
 		"tailwindcss": "^2.1.1",
 		"tslib": "^2.0.0",
-		"typescript": "^4.0.0"
+		"typescript": "^4.0.0",
+		"workbox-cacheable-response": "^6.1.5",
+		"workbox-core": "^6.1.5",
+		"workbox-expiration": "^6.1.5",
+		"workbox-precaching": "^6.1.5",
+		"workbox-routing": "^6.1.5",
+		"workbox-strategies": "^6.1.5",
+		"workbox-window": "^6.1.5"
 	},
 	"type": "module",
 	"dependencies": {
