feat: create a single page to show blog posts and add filter capacity

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"tailwindcss-scroll-snap": "^1.1.0"
+		"slugify": "^1.5.3",
+		"tailwindcss-scroll-snap": "^1.1.0",
+		"urlcat": "^2.0.4"
 	},
 	"husky": {
 		"hooks": {
