--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint-plugin-svelte3": "^3.2.0",
 		"husky": "^4.3.8",
 		"lint-staged": "^11.0.0",
+		"mdsvex": "^0.9.6",
 		"postcss": "^8.2.10",
 		"postcss-load-config": "^3.0.1",
 		"postcss-nested": "^5.0.5",
