feat: create a server route to get metadata of all blog posts written with .svx and call it

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@tailwindcss/typography": "^0.4.0",
 		"cookie": "^0.4.1",
+		"gray-matter": "^4.0.3",
 		"slugify": "^1.5.3",
 		"tailwindcss-scroll-snap": "^1.1.0",
 		"urlcat": "^2.0.4"
