--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	"devDependencies": {
 		"@commitlint/cli": "^12.1.4",
 		"@commitlint/config-conventional": "^12.1.4",
-		"@sveltejs/adapter-static": "^1.0.0-next.9",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.14",
+		"@sveltejs/adapter-static": "^1.0.0-next.11",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.5",
@@ -48,7 +48,6 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@tailwindcss/typography": "^0.4.0",
 		"cookie": "^0.4.1",
-		"gray-matter": "^4.0.3",
 		"slugify": "^1.5.3",
 		"tailwindcss-scroll-snap": "^1.1.0",
 		"urlcat": "^2.0.4"
