--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
     command = "npm run build"
     publish = "build/"
     functions = "functions/"
+
+[[redirects]]
+    from = "/my-way"
+    to = "/my-journey"
+    status = 301
+    force = true
