build: create custom config for Netlify Dev to support SvelteKit

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,13 @@
     publish = "build/"
     functions = "functions/"
 
+[dev]
+    framework = "#custom"
+    command = "npm run dev"
+    targetPort = 3000
+    port = 8888
+    publish = "dist/"
+
 [[redirects]]
     from = "/my-way"
     to = "/my-journey"
