--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "next",
 		"@commitlint/cli": "^12.1.4",
 		"@commitlint/config-conventional": "^12.1.4",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.14",
 		"@sveltejs/adapter-static": "^1.0.0-next.11",
+		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.5",
@@ -32,6 +34,7 @@
 		"rimraf": "^3.0.2",
 		"sharp": "^0.28.2",
 		"svelte": "^3.34.0",
+		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.7.1",
 		"tailwindcss": "^2.1.1",
 		"tslib": "^2.0.0",
