--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.5",
 		"cssnano": "^5.0.1",
+		"dedent": "^0.7.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
@@ -32,6 +33,7 @@
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"rimraf": "^3.0.2",
+		"sade": "^1.7.4",
 		"sharp": "^0.28.2",
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
