feat: install prism themes and configure Night Owl theme from Sarah Drasner

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@tailwindcss/typography": "^0.4.0",
 		"cookie": "^0.4.1",
+		"prism-themes": "^1.7.0",
 		"slugify": "^1.5.3",
 		"tailwindcss-scroll-snap": "^1.1.0",
 		"urlcat": "^2.0.4"
