--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"postcss-nested": "^5.0.5",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
+		"rehype-slug": "^4.0.1",
 		"rimraf": "^3.0.2",
 		"sade": "^1.7.4",
 		"sharp": "^0.28.2",
