--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-netlify": "^1.0.0-next.14",
 		"@sveltejs/adapter-static": "^1.0.0-next.11",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@typescript-eslint/eslint-plugin": "^4.29.0",
 		"@typescript-eslint/parser": "^4.29.0",
 		"autoprefixer": "^10.3.1",
