--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@commitlint/config-conventional": "^13.1.0",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.31",
 		"@sveltejs/adapter-static": "^1.0.0-next.19",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.171",
 		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@typescript-eslint/eslint-plugin": "^4.31.2",
 		"@typescript-eslint/parser": "^4.31.2",
