--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
     command = "npm run build"
     publish = "build/"
     functions = "functions/"
+    environment = { VITE_APP_URL = "https://baptiste.devessier.fr", NODE_VERSION = "16" }
 
 [dev]
     framework = "#custom"
