--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"autoprefixer": "^10.3.5",
 		"cssnano": "^5.0.8",
 		"dedent": "^0.7.0",
+		"esbuild": "^0.14.5",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
