--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"husky": "^4.3.8",
 		"lint-staged": "^11.1.2",
 		"mdsvex": "^0.9.8",
+		"outdent": "^0.8.0",
 		"postcss": "^8.4.5",
 		"postcss-load-config": "^3.1.0",
 		"postcss-nested": "^5.0.6",
