--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
+		"@steeze-ui/heroicons": "^1.1.1",
+		"@steeze-ui/svelte-icon": "^1.3.1",
 		"@tailwindcss/typography": "^0.5.0",
 		"cookie": "^0.4.1",
 		"feed": "^4.2.2",
