--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"rimraf": "^3.0.2",
 		"sade": "^1.7.4",
 		"sharp": "^0.28.3",
-		"shiki-twoslash": "^3.0.1",
+		"shiki-twoslash": "^3.0.2",
 		"snipsync": "^1.5.0",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.2.6",
@@ -68,6 +68,9 @@
 		"slugify": "^1.6.4",
 		"urlcat": "^2.0.4"
 	},
+	"overrides": {
+		"shiki": "^0.10.1"
+	},
 	"husky": {
 		"hooks": {
 			"pre-commit": "lint-staged",
@@ -82,6 +85,6 @@
 		"*.html": "prettier --write"
 	},
 	"volta": {
-		"node": "16.13.1"
+		"node": "16.14.2"
 	}
 }
