--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"fenceparser": "^2.0.0",
+		"hastscript": "^7.0.2",
 		"husky": "^4.3.8",
 		"lint-staged": "^11.1.2",
 		"mdsvex": "^0.9.8",
@@ -35,6 +36,7 @@
 		"postcss-nested": "^5.0.6",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.0.0",
 		"rimraf": "^3.0.2",
 		"sade": "^1.7.4",
