--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"code:sync:clear": "snipsync --clear"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^13.1.0",
-		"@commitlint/config-conventional": "^13.1.0",
+		"@commitlint/cli": "^16.2.3",
+		"@commitlint/config-conventional": "^16.2.1",
 		"@sveltejs/adapter-static": "^1.0.0-next.29",
 		"@sveltejs/kit": "1.0.0-next.303",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -71,7 +71,8 @@
 		"urlcat": "^2.0.4"
 	},
 	"overrides": {
-		"shiki": "^0.10.1"
+		"shiki": "^0.10.1",
+		"@typescript/vfs": "^1.3.5"
 	},
 	"husky": {
 		"hooks": {
