--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"@commitlint/config-conventional": "^16.2.1",
 		"@sveltejs/adapter-static": "^1.0.0-next.29",
 		"@sveltejs/kit": "1.0.0-next.303",
+		"@types/react": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"@xstate/react": "^3.0.0",
 		"autoprefixer": "^10.4.0",
 		"cssnano": "^5.0.8",
 		"esbuild": "^0.14.5",
@@ -36,6 +38,7 @@
 		"postcss-nested": "^5.0.6",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"react": "^18.0.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.0.0",
 		"rimraf": "^3.0.2",
