feat: redirect /my-way and /my-journey to /about page

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,12 @@
 
 [[redirects]]
     from = "/my-way"
-    to = "/my-journey"
+    to = "/about"
+    status = 301
+    force = true
+
+[[redirects]]
+    from = "/my-journey"
+    to = "/about"
     status = 301
     force = true
