--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
 		"tailwindcss": "^3.1.5",
 		"@tailwindcss/typography": "^0.5.0"
 	},
+	"dependencies": {
+		"@steeze-ui/svelte-icon": "^1.3.1",
+		"@steeze-ui/heroicons": "^1.1.1"
+	},
 	"type": "module"
 }
