--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
 		"postcss-load-config": "^4.0.1",
 		"autoprefixer": "^10.4.7",
 		"tailwindcss": "^3.1.5",
-		"@tailwindcss/typography": "^0.5.0"
+		"@tailwindcss/typography": "^0.5.0",
+		"mdsvex": "^0.10.6"
 	},
 	"dependencies": {
 		"@steeze-ui/svelte-icon": "^1.3.1",
-		"@steeze-ui/heroicons": "^1.1.1"
+		"@steeze-ui/heroicons": "^1.1.1",
+		"slugify": "^1.6.4"
 	},
 	"type": "module"
 }
