--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	"dependencies": {
 		"@steeze-ui/svelte-icon": "^1.3.1",
 		"@steeze-ui/heroicons": "^1.1.1",
-		"slugify": "^1.6.4"
+		"slugify": "^1.6.4",
+		"feed": "^4.2.2",
+		"urlcat": "^2.0.4"
 	},
 	"type": "module"
 }
