--- a/package.json
+++ b/package.json
@@ -14,31 +14,41 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/typography": "^0.5.0",
+		"@types/react": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"@xstate/react": "^3.0.0",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"fenceparser": "^2.0.0",
+		"hastscript": "^7.0.2",
+		"mdsvex": "^0.10.6",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"react": "^18.0.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-external-links": "^1.0.0",
+		"rehype-slug": "^5.0.0",
+		"shiki-twoslash": "^3.0.2",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0",
-		"postcss": "^8.4.14",
-		"postcss-load-config": "^4.0.1",
-		"autoprefixer": "^10.4.7",
-		"tailwindcss": "^3.1.5",
-		"@tailwindcss/typography": "^0.5.0",
-		"mdsvex": "^0.10.6"
+		"xstate": "^4.33.6"
 	},
 	"dependencies": {
-		"@steeze-ui/svelte-icon": "^1.3.1",
 		"@steeze-ui/heroicons": "^1.1.1",
-		"slugify": "^1.6.4",
+		"@steeze-ui/svelte-icon": "^1.3.1",
 		"feed": "^4.2.2",
+		"slugify": "^1.6.4",
 		"urlcat": "^2.0.4"
 	},
 	"type": "module"
