--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"code:sync": "snipsync",
+		"code:sync:clear": "snipsync --clear"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
@@ -42,7 +44,12 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0",
-		"xstate": "^4.33.6"
+		"xstate": "^4.33.6",
+		"snipsync": "^1.5.0",
+		"husky": "^4.3.8",
+		"lint-staged": "^11.1.2",
+		"@commitlint/cli": "^16.2.3",
+		"@commitlint/config-conventional": "^16.2.1"
 	},
 	"dependencies": {
 		"@steeze-ui/heroicons": "^1.1.1",
@@ -51,5 +58,25 @@
 		"slugify": "^1.6.4",
 		"urlcat": "^2.0.4"
 	},
-	"type": "module"
+	"type": "module",
+	"overrides": {
+		"shiki": "^0.10.1",
+		"@typescript/vfs": "^1.3.5"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"lint-staged": {
+		"*.{js,svelte,ts}": [
+			"prettier --write",
+			"eslint --fix"
+		],
+		"*.html": "prettier --write"
+	},
+	"volta": {
+		"node": "16.18.0"
+	}
 }
