feat: add English and French resumes and redirect old resume link to English resume

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,9 @@
     to = "/about"
     status = 301
     force = true
+
+[[redirects]]
+    from = "/cv.pdf"
+    to = "/cv-en.pdf"
+    status = 301
+    force = true
