--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"code:sync:clear": "snipsync --clear"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^16.2.3",
+		"@commitlint/config-conventional": "^16.2.1",
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/typography": "^0.5.0",
@@ -27,7 +29,10 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fenceparser": "^2.0.0",
 		"hastscript": "^7.0.2",
+		"husky": "^4.3.8",
+		"lint-staged": "^11.1.2",
 		"mdsvex": "^0.10.6",
+		"outdent": "^0.8.0",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
@@ -37,6 +42,7 @@
 		"rehype-external-links": "^1.0.0",
 		"rehype-slug": "^5.0.0",
 		"shiki-twoslash": "^3.0.2",
+		"snipsync": "^1.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
@@ -44,12 +50,7 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0",
-		"xstate": "^4.33.6",
-		"snipsync": "^1.5.0",
-		"husky": "^4.3.8",
-		"lint-staged": "^11.1.2",
-		"@commitlint/cli": "^16.2.3",
-		"@commitlint/config-conventional": "^16.2.1"
+		"xstate": "^4.33.6"
 	},
 	"dependencies": {
 		"@steeze-ui/heroicons": "^1.1.1",
