--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"husky": "^4.3.8",
 		"lint-staged": "^11.1.2",
 		"mdsvex": "^0.10.6",
+		"outdent": "^0.8.0",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
