--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
 		"@commitlint/config-conventional": "^16.2.1",
-		"@sveltejs/adapter-static": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/typography": "^0.5.0",
 		"@types/react": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"@xstate/react": "^3.0.0",
-		"autoprefixer": "^10.4.7",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -33,7 +33,7 @@
 		"lint-staged": "^11.1.2",
 		"mdsvex": "^0.10.6",
 		"outdent": "^0.8.0",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.23",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
@@ -43,13 +43,13 @@
 		"rehype-slug": "^5.0.0",
 		"shiki-twoslash": "^3.0.2",
 		"snipsync": "^1.8.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.7",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.1.5",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0",
 		"xstate": "^4.33.6"
 	},
 	"dependencies": {
