--- a/netlify.toml
+++ b/netlify.toml
@@ -1,36 +1,39 @@
 [build]
-    command = "npm run build"
-    publish = "build/"
-    functions = "functions/"
-    environment = { VITE_APP_URL = "https://baptiste.devessier.fr/", NODE_VERSION = "16" }
+command = "npm run build"
+publish = "build/"
+functions = "functions/"
+environment = { VITE_APP_URL = "https://baptiste.devessier.fr/", NODE_VERSION = "16" }
 
 [dev]
-    framework = "#custom"
-    command = "npm run dev"
-    targetPort = 3000
-    port = 8888
-    publish = "dist/"
+framework = "#custom"
+command = "npm run dev"
+targetPort = 5173
+port = 8888
+publish = "dist/"
+
+[functions."schedule-rebuild"]
+schedule = "@daily"
 
 [[redirects]]
-    from = "/my-way"
-    to = "/about"
-    status = 301
-    force = true
+from = "/my-way"
+to = "/about"
+status = 301
+force = true
 
 [[redirects]]
-    from = "/my-journey"
-    to = "/about"
-    status = 301
-    force = true
+from = "/my-journey"
+to = "/about"
+status = 301
+force = true
 
 [[redirects]]
-    from = "/cv.pdf"
-    to = "/cv-en.pdf"
-    status = 301
-    force = true
+from = "/cv.pdf"
+to = "/cv-en.pdf"
+status = 301
+force = true
 
 [[redirects]]
-    from = "/note/catch-javascript-errors-in-react-applications-with-error-boundaries/"
-    to = "/note/catch-javascript-errors-in-react-applications-with-an-error-boundary/"
-    status = 301
-    force = true
+from = "/note/catch-javascript-errors-in-react-applications-with-error-boundaries/"
+to = "/note/catch-javascript-errors-in-react-applications-with-an-error-boundary/"
+status = 301
+force = true
