--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@steeze-ui/heroicons": "^1.1.1",
 		"@steeze-ui/svelte-icon": "^1.3.1",
 		"cheerio": "^1.0.0-rc.12",
+		"clsx": "^2.1.1",
 		"feed": "^4.2.2",
 		"rss-parser": "^3.13.0",
 		"slugify": "^1.6.4",
