--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
 		"feed": "^4.2.2",
 		"rss-parser": "^3.13.0",
 		"slugify": "^1.6.4",
-		"urlcat": "^2.0.4"
+		"urlcat": "^2.0.4",
+		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"overrides": {
