--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@commitlint/config-conventional": "^16.2.1",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/typography": "^0.5.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/react": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -46,7 +46,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.1.5",
+		"tailwindcss": "^3.4.14",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
@@ -56,10 +56,11 @@
 		"@steeze-ui/heroicons": "^1.1.1",
 		"@steeze-ui/svelte-icon": "^1.3.1",
 		"cheerio": "^1.0.0-rc.12",
+		"clsx": "^2.1.1",
 		"feed": "^4.2.2",
 		"rss-parser": "^3.13.0",
 		"slugify": "^1.6.4",
-		"urlcat": "^2.0.4"
+		"zod": "^3.23.8"
 	},
 	"type": "module",
 	"overrides": {
